--- a/src/Components/homepage/homepage.scss
+++ b/src/Components/homepage/homepage.scss
@@ -1,3 +1,5 @@
+@import "../../assets/scss/helpers/mixins";
+
 .name {
   &-title {
     color: #64ffda;
@@ -38,6 +40,10 @@
   position: fixed;
   left: 40px;
   bottom: 0;
+
+  @include breakpoint(mobile-max) {
+    display: none;
+  }
   ul {
     list-style-type: none;
     display: flex;
@@ -73,6 +79,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @include breakpoint(mobile-max) {
+    display: none;
+  }
 
   a {
     writing-mode: vertical-rl;
@@ -115,6 +125,11 @@
     display: flex;
     gap: 40px;
     justify-content: center;
+
+    @include breakpoint(mobile-max) {
+      justify-content: flex-start;
+      flex-direction: column;
+    }
 
     &-left {
       max-width: 400px;
@@ -178,6 +193,10 @@
     gap: 40px;
     color: #a8b2d1;
     font-size: 18px;
+
+    @include breakpoint(mobile-max) {
+      flex-direction: column;
+    }
     &-left {
       max-width: 350px;
 
@@ -232,6 +251,10 @@
     width: 100%;
     grid-template-columns: 300px 1fr 2fr;
     // gap: 20px;
+
+    @include breakpoint(mobile-max) {
+      grid-template-columns: auto;
+    }
   }
   &-card {
     position: relative;
@@ -277,7 +300,7 @@
 
     li {
       border-right: 1px solid;
-      padding: 0 5px;
+      padding: 0 4px;
       line-height: 1;
       text-transform: capitalize;
 
